--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
-.tictac td{
+.tictac td {
     border: 1px black solid;
     width: 50px;
     height: 50px;
     text-align: center;
+}
+
+.tictac a {
+    display: block;
+    height: 100%;
+    background: #e8e3e3;
 }
